package dp_Iterator;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

/**
 * @author archmagece
 * @since 2017-01-14 19
 */
@Data
@AllArgsConstructor
@NoArgsConstructor
public class Element {
	private String name;
}
